<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.shoplocalxml.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_catalog"
        android:name="com.example.shoplocalxml.ui.gallery.GalleryFragment"
        android:label="@string/menu_catalog"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.shoplocalxml.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.shoplocalxml.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_slideshow" />



    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.shoplocalxml.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@+id/nav_login"
            app:popUpToInclusive="true"
            />
    </fragment>
</navigation>