<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:text="@string/text_family"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextFName"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextFName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextTextFName" />

    <com.example.shoplocalxml.custom_view.EditTextExt
        android:id="@+id/editTextTextFName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ems="10"
        android:inputType="text"
        app:barrierAllowsGoneWidgets="false"
        app:chainUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextLName"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/editTextTextLName" />

    <com.example.shoplocalxml.custom_view.EditTextExt
        android:id="@+id/editTextTextLName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ems="10"
        android:inputType="text"
        app:barrierAllowsGoneWidgets="false"
        app:barrierDirection="start"
        app:chainUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextFName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_phone"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPhone"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPhone" />

    <com.example.shoplocalxml.custom_view.EditTextExt
        android:id="@+id/editTextTextPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ems="10"
        android:inputType="text"
        app:barrierAllowsGoneWidgets="false"
        app:barrierDirection="start"
        app:chainUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextLName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextMail"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/editTextTextMail" />

    <com.example.shoplocalxml.custom_view.EditTextExt
        android:id="@+id/editTextTextMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ems="10"
        android:inputType="text"
        app:barrierAllowsGoneWidgets="false"
        app:barrierDirection="start"
        app:chainUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPhone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_password"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />

    <com.example.shoplocalxml.custom_view.EditTextExt
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:ems="10"
        android:inputType="text"
        app:barrierAllowsGoneWidgets="false"
        app:chainUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/barrier2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextMail" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="textView1,textView2,textView3,textView4,textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>