<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="filter"
            type="com.example.shoplocalxml.classes.sort_filter.Filter"/>
        <variable
            name="eventhandler"
            type="com.example.shoplocalxml.ui.filter.FilterActivity"/>
    </data>

    <LinearLayout
        android:id="@+id/layoutMainFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/BackgroundDark"
        android:orientation="vertical">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp">


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFilterConfirm"
                style="@style/ConfirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->eventhandler.applyFilter()}"
                android:text="@string/text_perform"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonFilterReset"
                app:layout_constraintTop_toTopOf="@+id/buttonFilterReset" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonFilterReset"
                style="@style/CancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->eventhandler.resetFilter()}"
                android:text="@string/text_reset"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonFilterConfirm"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewMode"
                style = "@style/ContentCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonFilterCardMode"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:onClick="@{(view)->eventhandler.changeViewMode(view)}"
                        app:backgroundTint="@color/EditTextBackgroundDark"
                        app:icon="@drawable/ic_cardmode"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@color/colorBrend" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buttonFilterRowMode"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:insetLeft="0dp"
                        android:insetTop="0dp"
                        android:insetRight="0dp"
                        android:insetBottom="0dp"
                        android:onClick="@{(view)->eventhandler.changeViewMode(view)}"
                        app:backgroundTint="@color/UncheckedButton"
                        app:icon="@drawable/ic_rowmode"
                        app:iconGravity="textStart"
                        app:iconPadding="0dp"
                        app:iconTint="@color/EditTextFont" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewDiscount"
                android:layout_marginTop="8dp"
                style = "@style/ContentCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewMode">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textFilterDiscount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/text_discount"
                        android:textColor="@color/EditTextFont" />


                    <FrameLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.example.shoplocalxml.custom_view.EditTextExt
                            android:id="@+id/editTextFilterDiscount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="8dp"
                            android:ems="10"
                            android:inputType="number"
                            android:maxLength="2"
                            android:text="@={filter.discount}"
                            android:textAlignment="textEnd" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:alpha="0.5"
                            android:text="@string/text_from"
                            android:textColor="@color/EditTextFont" />
                    </FrameLayout>


                    <TextView
                        android:id="@+id/textFilterPercent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="32dp"
                        android:text="%"
                        android:textColor="@color/EditTextFont" />

                    <CheckBox
                        android:id="@+id/checkboxFilterFavorite"
                        android:layout_width="wrap_content"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.3"
                        android:background="@android:color/transparent"
                        android:button="@null"
                        android:checked="@={filter.favorite}"
                        android:drawableStart="@drawable/ic_checkbox"
                        android:drawablePadding="2dp"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:text="@string/text_favorite"
                        android:textColor="@color/EditTextFont" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewRange"
                android:layout_marginTop="8dp"
                style = "@style/ContentCardView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewDiscount">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textFilterPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_price"
                        android:textColor="@color/EditTextFont" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1">

                            <com.example.shoplocalxml.custom_view.EditTextExt
                                android:id="@+id/editTextFilterRangeFrom"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:maxLength="6"
                                android:text="@={filter.fromPrice}"
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/textHintRangeFrom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:alpha="0.5"
                                android:text="@string/text_from"
                                android:textColor="@color/EditTextFont" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <com.example.shoplocalxml.custom_view.EditTextExt
                                android:id="@+id/editTextFilterRangeTo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:inputType="number"
                                android:maxLength="6"
                                android:text="@={filter.toPrice}"
                                android:textAlignment="textEnd" />

                            <TextView
                                android:id="@+id/textHintRangeTo"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_marginStart="16dp"
                                android:alpha="0.5"
                                android:text="@string/text_to"
                                android:textColor="@color/EditTextFont" />
                        </FrameLayout>


                    </LinearLayout>
                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewSection"
                style = "@style/ContentCardView"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonFilterReset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardViewRange">

                <ExpandableListView
                    android:id="@+id/expListViewFilter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@color/PrimaryDark"
                    android:dividerHeight="0dp"
                    android:groupIndicator="@null"
                    android:scrollbars="none">
                </ExpandableListView>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>